pkgdata_DATA = generate-build-model.nix \
	generate-deployment-model.nix \
	generate-profiles.nix \
	generate-target-packages.nix \
	gendist-roundrobin.nix \
	infrastructure-xml.nix \
	instantiate.nix \
	manifest.nix \
	normalize-architecture.nix \
	normalize-infrastructure.nix \
	normalize-services.nix \
	roundrobin.nix \
	wrap-architecture.nix

EXTRA_DIST = $(pkgdata_DATA)
